--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <meta name="description" content="Simple Progressive Web App  By Bos Naufal Built With Vue Js">
+  <meta name="description" content="Simple Progressive Web App  By Bos TG Built With Vue Js">
 
   <!-- MANIFEST -->
   <link rel="manifest" href="./manifest.json">
